# cppkh

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.py  build.sh  package.bat  package.ps1  package.sh  pd_codes_10_3.txt
docs/: ALGORITHM.md  BENCHMARKS.md  BUILD_AND_PACKAGING.md  CLI_OPTIONS.md  JAVAKH_REFERENCE.md  PYTHON_CTYPES.md  PYTHON_PACKAGE.md  TEST.md
python/: __init__.py  cppkh_ctypes.py
python_project/cppkh-interface/: README.md  pyproject.toml
python_project/cppkh-interface/build_backend/: cppkh_interface_build_backend.py
python_project/cppkh-interface/cppkh_interface/: __init__.py  main.py
reference/javakh/: CppkhJavaKhBatchRunner.java  README.md
reference/javakh/org/katlas/JavaKh/: JavaKh.java  PDOrientation.java
samples/: unknot.pd
src/: main.cpp
tests/data/: README.md  pd_codes_10_3_links.labels.txt  pd_codes_10_3_links.txt  pd_orientation_cases.json  test_pdcode.labels.txt  test_pdcode.txt
tools/: benchmark_cppkh_interface.py  benchmark_pdcode.ps1  copy_runtime_deps.ps1  install_winlibs_gcc.ps1  measure_peak_memory.py  plot_benchmarks.py  prepare_pdcode.py  test_10_3_links_consistency.py  test_cppkh_interface_standalone.py  test_kh_consistency.py  test_pd_orientation.py
