cmake_minimum_required(VERSION 3.12)
project(javakh_cpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(KH_THREAD_BACKEND "auto" CACHE STRING "Thread backend: auto, pthread, std, boost, win32, single")
set_property(CACHE KH_THREAD_BACKEND PROPERTY STRINGS auto pthread std boost win32 single)

add_executable(javakh_cpp src/main.cpp)
target_include_directories(javakh_cpp PRIVATE src)

if(KH_THREAD_BACKEND STREQUAL "auto")
  if(WIN32)
    set(KH_THREAD_BACKEND "win32")
  else()
    set(KH_THREAD_BACKEND "pthread")
  endif()
endif()

if(KH_THREAD_BACKEND STREQUAL "pthread")
  find_package(Threads REQUIRED)
  target_compile_definitions(javakh_cpp PRIVATE KH_THREAD_BACKEND_PTHREAD)
  target_link_libraries(javakh_cpp PRIVATE Threads::Threads)
elseif(KH_THREAD_BACKEND STREQUAL "std")
  find_package(Threads REQUIRED)
  target_compile_definitions(javakh_cpp PRIVATE KH_THREAD_BACKEND_STD)
  target_link_libraries(javakh_cpp PRIVATE Threads::Threads)
elseif(KH_THREAD_BACKEND STREQUAL "boost")
  find_package(Threads REQUIRED)
  find_package(Boost REQUIRED COMPONENTS thread system)
  target_compile_definitions(javakh_cpp PRIVATE KH_THREAD_BACKEND_BOOST)
  target_link_libraries(javakh_cpp PRIVATE Boost::thread Boost::system Threads::Threads)
elseif(KH_THREAD_BACKEND STREQUAL "win32")
  target_compile_definitions(javakh_cpp PRIVATE KH_THREAD_BACKEND_WIN32)
elseif(KH_THREAD_BACKEND STREQUAL "single")
  target_compile_definitions(javakh_cpp PRIVATE KH_THREAD_BACKEND_SINGLE)
else()
  message(FATAL_ERROR "Unknown KH_THREAD_BACKEND=${KH_THREAD_BACKEND}")
endif()
