cmake_minimum_required(VERSION 3.12)
project(javakh_cpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(KH_THREAD_BACKEND "auto" CACHE STRING "Thread backend: auto, pthread, std, boost, win32, single")
set_property(CACHE KH_THREAD_BACKEND PROPERTY STRINGS auto pthread std boost win32 single)
option(CPPKH_BUILD_SHARED "Build the cppkh shared library" OFF)

add_executable(javakh_cpp src/main.cpp)
target_include_directories(javakh_cpp PRIVATE src)
set(KH_TARGETS javakh_cpp)

if(CPPKH_BUILD_SHARED)
  add_library(cppkh SHARED src/main.cpp)
  target_include_directories(cppkh PRIVATE src)
  target_compile_definitions(cppkh PRIVATE CPPKH_SHARED_LIBRARY)
  list(APPEND KH_TARGETS cppkh)
endif()

if(KH_THREAD_BACKEND STREQUAL "auto")
  if(WIN32)
    set(KH_THREAD_BACKEND "win32")
  else()
    set(KH_THREAD_BACKEND "pthread")
  endif()
endif()

if(KH_THREAD_BACKEND STREQUAL "pthread")
  find_package(Threads REQUIRED)
  foreach(target IN LISTS KH_TARGETS)
    target_compile_definitions(${target} PRIVATE KH_THREAD_BACKEND_PTHREAD)
    target_link_libraries(${target} PRIVATE Threads::Threads)
  endforeach()
elseif(KH_THREAD_BACKEND STREQUAL "std")
  find_package(Threads REQUIRED)
  foreach(target IN LISTS KH_TARGETS)
    target_compile_definitions(${target} PRIVATE KH_THREAD_BACKEND_STD)
    target_link_libraries(${target} PRIVATE Threads::Threads)
  endforeach()
elseif(KH_THREAD_BACKEND STREQUAL "boost")
  find_package(Threads REQUIRED)
  find_package(Boost REQUIRED COMPONENTS thread system)
  foreach(target IN LISTS KH_TARGETS)
    target_compile_definitions(${target} PRIVATE KH_THREAD_BACKEND_BOOST)
    target_link_libraries(${target} PRIVATE Boost::thread Boost::system Threads::Threads)
  endforeach()
elseif(KH_THREAD_BACKEND STREQUAL "win32")
  foreach(target IN LISTS KH_TARGETS)
    target_compile_definitions(${target} PRIVATE KH_THREAD_BACKEND_WIN32)
  endforeach()
elseif(KH_THREAD_BACKEND STREQUAL "single")
  foreach(target IN LISTS KH_TARGETS)
    target_compile_definitions(${target} PRIVATE KH_THREAD_BACKEND_SINGLE)
  endforeach()
else()
  message(FATAL_ERROR "Unknown KH_THREAD_BACKEND=${KH_THREAD_BACKEND}")
endif()
