[project]
name = "cppkh-interface"
version = "0.1.1"
description = "Python interface for cppkh Khovanov homology computation with runtime C++ compilation."
authors = [
    {name = "GGN_2015", email = "neko@jlulug.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cpp-simple-interface>=0.1.2",
    "pd-code-sanity>=0.0.1",
    "pd-code-delete-nugatory",
    "pd-code-de-r1"
]

[project.urls]
Homepage = "https://github.com/GGN-2015/cppkh"
Repository = "https://github.com/GGN-2015/cppkh"
Documentation = "https://github.com/GGN-2015/cppkh/blob/main/docs/PYTHON_PACKAGE.md"

[project.scripts]
cppkh-interface = "cppkh_interface.main:main"

[tool.poetry]
packages = [{ include = "cppkh_interface" }]
include = [
    { path = "build_backend/cppkh_interface_build_backend.py", format = ["sdist"] },
    { path = "cppkh_interface/data/src/main.cpp", format = ["sdist", "wheel"] }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools>=61"]
build-backend = "cppkh_interface_build_backend"
backend-path = ["build_backend"]
