[project]
name = "cppkh-interface"
version = "0.2.1"
description = "Dependency-free Python interface for cppkh with runtime C++ compilation."
authors = [
    {name = "GGN_2015", email = "neko@jlulug.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/GGN-2015/cppkh"
Repository = "https://github.com/GGN-2015/cppkh"
Documentation = "https://github.com/GGN-2015/cppkh/blob/main/docs/PYTHON_PACKAGE.md"

[project.scripts]
cppkh-interface = "cppkh_interface.main:main"

[tool.poetry]
packages = [{ include = "cppkh_interface" }]
include = [
    { path = "build_backend/cppkh_interface_build_backend.py", format = ["sdist"] },
    { path = "cppkh_interface/data/src/main.cpp", format = ["sdist", "wheel"] }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "cppkh_interface_build_backend"
backend-path = ["build_backend"]
